--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Blithfield Construction
+email: Antbagnall68@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+Blithfield Construction is a well establishedconstruction firm established in 1972,
+based in Staffordshire, specialising in all aspects of groundworks ranging from [
+excavation to the finished surface.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: Blithfieldconstruction
+github_username:  Bagnallscience
 
 # Build settings
 markdown: kramdown
